--- a/packages/react-map/src/index.scss
+++ b/packages/react-map/src/index.scss
@@ -8,13 +8,13 @@ $borderRadius: 8px;
   border-radius: $borderRadius;
 
   > a:first-child {
-    border-top-left-radius: $borderRadius;
-    border-top-right-radius: $borderRadius;
+    border-top-left-radius: $borderRadius!important;
+    border-top-right-radius: $borderRadius!important;
   }
 
   > a:last-child {
-    border-bottom-left-radius: $borderRadius;
-    border-bottom-right-radius: $borderRadius;
+    border-bottom-left-radius: $borderRadius!important;
+    border-bottom-right-radius: $borderRadius!important;
   }
 }
 
